2002-07-30  Wakaba <w@suika.fam.cx>

	* UA.pm:
	- (add, replace, item, delete): Reimplemented (or newly
	implemented) by standard Message::Field::Structured method.
	- (product, product_name, product_version, product_comment):
	Removed. (Use item method instead.)
	- (parse): Use robust regex instead of strict usefor
	format regex.  (Accept bare non-token characters
	as far as possible.)

2002-07-28  Wakaba <w@suika.fam.cx>

	* UA.pm (add_rcs, replace_rcs): New methods.

2002-07-22  Wakaba <w@suika.fam.cx>

	* XMoe.pm (_decode_parameters): Don't push 'of' pseudo
	parameter to @$param before SUPER::_decode_parameters.
	(To prevent its value from being reinterpreted incorrectly
	and so being broken.) (Giving also 'section_no' to the hash
	and passing to SUPER::_decode_parameters was another way
	to do it.)
	* UA.pm (add_our_name): Undef $@ after eval of use Config
	and use Win32.

2002-07-21  Wakaba <w@suika.fam.cx>

	* Structured.pm (_parse_value): Inherit header_default_charset,
	header_default_charset_input, body_default_charset,
	body_default_charset_input.

2002-07-13  Wakaba <w@suika.fam.cx>

	* MDNDisposition.pm, ReportingUA.pm: New modules.

2002-07-08  Wakaba <w@suika.fam.cx>

	* TypedText.pm: New module.

2002-06-29  Wakaba <w@suika.fam.cx>

	* ContentType.pm, Params.pm, ValueParams.pm,
	XMoe.pm: Rewritten.

2002-06-23  Wakaba <w@suika.fam.cx>

	* AngleQuoted.pm (%REG): Don't define regex locally.
	(Moved to Message::Util).
	* ContentType.pm, Date.pm, UA.pm,
	ValueParams.pm: Fix some codes not to be warned
	as 'Use of uninitialized value'.
	* Structured.pm 
	(header_default_charset, header_default_charset_input):
	New options.

2002-06-16  wakaba <w@suika.fam.cx>

	* MsgID.pm: Check '.test' reserved TLD if '-validate'.
	* UA.pm (add_our_name): New method (moved from 
	Message::Entity).
	* ListID.pm, XFace.pm: New modules.

2002-06-15  wakaba <w@suika.fam.cx>

	* AngleQuoted.pm: New module.
	* Mailbox.pm, URI.pm: Use AngleQuoted.pm
