@@ -1,3 +1,9 @@
+2002-08-01  Wakaba <w@suika.fam.cx>
+
+	* Unstructured.pm: Rewritten.
+	* Subject.pm: Likewise.  Support Japanese government's
+	spam mail prefix if Perl has defined $^V (=~ has UTF-8 support).
+
 2002-07-30  Wakaba <w@suika.fam.cx>
 
 	* UA.pm:
